--- a/gestiogimnasos/pom.xml
+++ b/gestiogimnasos/pom.xml
@@ -18,7 +18,7 @@
 	<description>API REST de gimnasos</description>
 	
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	
 	<dependencies>
@@ -54,15 +54,33 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		
+		<!-- Base de datos en memoria H2 -->
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<!-- Spring Data (JPA) -->
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>		
+		</dependency>
 
 	</dependencies>
+	
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				
 			</plugin>
+			
 		</plugins>
 	</build>
 
