--- a/gestiogimnasos/src/main/resources/application.properties
+++ b/gestiogimnasos/src/main/resources/application.properties
@@ -1,6 +1,43 @@
 spring.application.name=gestiogimnasos
-
 server.port=8081
 
 #Necesario para poder disponer de Swagger...
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+# =============================================
+#
+# Configurem H2
+#
+# =============================================
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+# =============================================
+#
+# Configurem la font de dades (datasource)
+#
+# =============================================
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+# =============================================
+#
+# Executem scripts de schema.sql i data.sql
+#
+# ============================================
+spring.sql.init.schema-locations=classpath:/data/h2/schema.sql
+spring.sql.init.data-locations=classpath:/data/h2/data.sql
+# =============================================
+#
+# Configurem JPA
+#
+# =============================================
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true  
+spring.jpa.properties.hibernate.format_sql=true
+#Necesario para validar el mapping de JPA
+spring.jpa.hibernate.ddl-auto=validate
+
+
+#[Si ho descomentem, es mostrará per la consola les sentències sql que es vagin executant
+#spring.jpa.show-sql=true  
+#spring.jpa.properties.hibernate.format_sql=true]
